# czso

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  default.mk  demo.ipynb  pyproject.toml
.github/workflows/: publish.yml  tests.yml
czso/: __init__.py  core.py
tests/: test_core.py  test_live.py
