[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "czso"
version = "0.1.0"
description = "Python wrapper around Open Data from the Czech Statistical Office"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Mojmir Vinkler" },
]
keywords = ["czech", "statistics", "open-data", "czso"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[tool.hatch.build.targets.wheel]
packages = ["czso"]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit the real CZSO API (may be slow)",
]

[tool.ty.environment]
python = ".venv"
